k8s/nats/nats-websocket-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
  namespace: messaging
spec:
  template:
    spec:
      containers:
      - name: nats
        ports:
        - containerPort: 4222
          name: nats
        - containerPort: 6222  
          name: cluster
        - containerPort: 8222
          name: monitor
        - containerPort: 8080
          name: websocket
---
apiVersion: v1
kind: Service
metadata:
  name: nats-websocket
  namespace: messaging
spec:
  selector:
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: nats
  ports:
  - name: websocket
    port: 8080
    targetPort: 8080
